--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title> Tarun's personal website</title>
 </head>
-<body>
+<body background-color="cornflowerblue">
   <table>
     <tr>
       <td><img src="naruto mod.png" alt="Anime nerd"></td>
